--- a/index.html
+++ b/index.html
@@ -6,6 +6,17 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <section id="arrivals">
+        <div class="container">
+            <div class="arrivals">
+                <h4>New Arrivals</h4>
+                <div class="cards">
+                    <div class="card">
+                        <img src="assets/images/card_images/new_product1.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
