--- a/index.html
+++ b/index.html
@@ -1,25 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="assets/css/index.css">
     <title>Document</title>
 </head>
+
 <body>
     <section id="arrivals">
         <div class="container">
             <div class="arrivals">
                 <h4>New Arrivals</h4>
                 <div class="cards">
-                    <div class="card">
-                        <img src="assets/images/card_images/new_product1.png" alt="">
+                    <div class="card card1">
+                        <div class="image">
+                        </div>
+                        <div class="texts">
+                            <p>Thermo Ball Etip Gloves</p>
+                            <span>$ 45,743</span>
+                        </div>
+                    </div>
+                    <div class="card card2">
+                        <div class="image">
+                        </div>
+                        <p>Thermo Ball Etip Gloves</p>
+                        <span>$ 45,743</span>
+                    </div>
+                    <div class="card card3">
+                        <div class="image">
+                        </div>
+                        <p>Thermo Ball Etip Gloves</p>
+                        <span>$ 45,743</span>
                     </div>
                 </div>
             </div>
         </div>
     </section>
-    <section>
-        <h1>main</h1>
-    </section>
 </body>
+
 </html>
