--- a/index.html
+++ b/index.html
@@ -3,9 +3,91 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css" integrity="sha512-5Hs3dF2AEPkpNAR7UiOHba+lRSJNeM2ECkwxUIxC1Q/FLycGTbNapWXB4tP889k5T5Ju8fs4b1P5z/iB4nMfSQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="./assets/css/index.css">
     <title>Document</title>
 </head>
 <body>
-    <h1>Feyza</h1>
+    <section id="watchs">
+ <div class="container">
+    <div class="watchs">
+        <div class="watch">
+            <div class="text">
+                <h5>Watch of Choice</h5>
+                <p>Enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse.</p>
+                <a href="#">SHOW WATCHES</a>  
+            </div>
+            <div class="image">
+                <img src="https://preview.colorlib.com/theme/timezone/assets/img/gallery/choce_watch1.png.webp" alt="">
+            </div>
+        </div>
+        <div class="watch">
+            <div> 
+                <img src="https://preview.colorlib.com/theme/timezone/assets/img/gallery/choce_watch2.png.webp" alt="">
+            </div>
+            <div class="text">
+                <h5>Watch of Choice</h5>
+                <p>Enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse.</p>
+                <a href="#">SHOW WATCHES</a>
+            </div>
+        </div>
+ </div>
+</div>
+    </section>
+   <section id="systems">
+    <div class="container">
+  <div class="systems">
+<div class="system">
+    <i class="fa-solid fa-box"></i>
+    <p>Free Shipping Method</p>
+    <p>aorem ixpsacdolor sit ameasecur adipisicing elitsf edasd.</p>
+</div>
+<div class="system">
+    <i class="fa-solid fa-lock"></i>
+    <p>Secure Payment System</p>
+    <p>aorem ixpsacdolor sit ameasecur adipisicing elitsf edasd.</p>
+</div>
+<div class="system">
+    <i class="fa-solid fa-arrows-rotate"></i>
+    <p>Secure Payment System</p>
+    <p>aorem ixpsacdolor sit ameasecur adipisicing elitsf edasd.</p>
+</div>
+</div>
+  </div>
+   </section>
+   <footer>
+    <div class="container">
+        <div>
+            <div><img src="https://preview.colorlib.com/theme/timezone/assets/img/logo/logo.png.webp" alt=""></div>
+            <p>Asorem ipsum adipolor sdit amet, consectetur adipisicing elitcf sed do eiusmod tem.</p>
+            <div>
+                <ul>
+                    <li><h4>Quick Links</h4></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Offers & Discounts</a></li>
+                    <li><a href="#">Get Coupon</a></li>
+                    <li><a href="#">Contact Us</a></li>
+                </ul>
+            </div>
+            <div>
+                <ul>
+                    <li><h4>New Products</h4></li>
+                    <li><a href="#">Woman Cloth</a></li>
+                    <li><a href="#">Fashion Accessories</a></li>
+                    <li><a href="#">Man Accessories</a></li>
+                    <li><a href="#">Rubber made Toys</a></li>
+                </ul>
+            </div>
+            <div>
+                <ul>
+                    <li><h4>Support</h4></li>
+                    <li><a href="#">Frequently Asked Questions</a></li>
+                    <li><a href="#">Terms & Conditions</a></li>
+                    <li><a href="#">Privacy Policy</a></li>
+                    <li><a href="#">Report a Payment Issue</a></li>
+                </ul>
+            </div>
+        </div>
+   </footer>
 </body>
 </html>
