--- a/index.html
+++ b/index.html
@@ -7,50 +7,114 @@
     <title>Home Page</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css"
+        integrity="sha512-5Hs3dF2AEPkpNAR7UiOHba+lRSJNeM2ECkwxUIxC1Q/FLycGTbNapWXB4tP889k5T5Ju8fs4b1P5z/iB4nMfSQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="assets/css/index.css">
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#">Navbar scroll</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarScroll">
-            <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
-              </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Link
-                </a>
-                <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Action</a></li>
-                  <li><a class="dropdown-item" href="#">Another action</a></li>
-                  <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="#">Something else here</a></li>
+    <nav class="navbar">
+        <div class="container ">
+            <div class="image">
+                <img src="assets/images/logo (2).png" alt="">
+            </div>
+
+            <div class="nav-mid">
+                <ul class="page-list">
+                    <li>Home</li>
+                    <li>Shop</li>
+                    <li>About</li>
+                    <li>Latest</li>
+                    <li>Blog</li>
+                    <li>Pages</li>
+                    <li>Contact</li>
                 </ul>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link disabled" aria-disabled="true">Link</a>
-              </li>
-            </ul>
-            <form class="d-flex" role="search">
-              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-              <button class="btn btn-outline-success" type="submit">Search</button>
-            </form>
-          </div>
+            </div>
+            <div class="icons">
+                <div>
+                    <i class="fa-solid fa-magnifying-glass"></i>
+                </div>
+                <div>
+                    <i class="fa-regular fa-user"></i>
+                </div>
+                <div>
+                    <i class="fa-solid fa-cart-shopping"></i>
+                </div>
+            </div>
+
         </div>
-      </nav>
+    </nav>
+
+    <section id="banner">
+        <div class="header"></div>
+        <div class="banner-left">
+            <h1>Select Your New <br> Perfect Style</h1>
+            <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea <br>
+                commodo
+                consequat is aute irure.</p>
+            <button class="shop-btn">SHOP NOW</button>
+        </div>
+        <div class="banner-right">
+            <img class="watch-image" src="assets/images/watch.png" alt="">
+        </div>
+    </section>
+
+    <section id="new-arrivals">
+
+    </section>
+
+    <section id="popular-items">
+        <div class="popular-items">
+            <div class="head">
+                <h2>Popular Items</h2>
+                <p>Consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna <br> aliqua.
+                    Quis
+                    ipsum suspendisse ultrices gravida.</p>
+            </div>
+            <div class="cards">
+                <div class="row">
+                    <div class="col-4">
+                        <img src="assets/images/popular1.png" alt="">
+                        <h3>Thermo Ball Etip Gloves</h3>
+                        <p>$ 45,743</p>
+                    </div>
+                    <div class="col-4">
+                        <img src="assets/images/popular2.png" alt="">
+                        <h3>Thermo Ball Etip Gloves</h3>
+                        <p>$ 45,743</p>
+                    </div>
+                    <div class="col-4">
+                        <img src="assets/images/popular3.png" alt="">
+                        <h3>Thermo Ball Etip Gloves</h3>
+                        <p>$ 45,743</p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-4">
+                        <img src="assets/images/popular4.png" alt="">
+                        <h3>Thermo Ball Etip Gloves</h3>
+                        <p>$ 45,743</p>
+                    </div>
+                    <div class="col-4">
+                        <img src="assets/images/popular5.png" alt="">
+                        <h3>Thermo Ball Etip Gloves</h3>
+                        <p>$ 45,743</p>
+                    </div>
+                    <div class="col-4">
+                        <img src="assets/images/popular6.png" alt="">
+                        <h3>Thermo Ball Etip Gloves</h3>
+                        <p>$ 45,743</p>
+                    </div>
+                </div>
+                <button class="more-products">VIEW MORE PRODUCTS</button>
+            </div>
+        </div>
+    </section>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
-        <script src="assets/js/index.js"></script>
+    <script src="assets/js/index.js"></script>
 </body>
 
 </html>
