--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css"
         integrity="sha512-5Hs3dF2AEPkpNAR7UiOHba+lRSJNeM2ECkwxUIxC1Q/FLycGTbNapWXB4tP889k5T5Ju8fs4b1P5z/iB4nMfSQ=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="assets/css/index.css">
 </head>
 
@@ -61,18 +65,47 @@
     </section>
 
     <section id="new-arrivals">
-
+        <div class="new-arrivals">
+            <div class="head-2">
+                <h2>New Arrivals</h2>
+            </div>
+            <div class="new-arrivals-cards">
+                <div class="row">
+                    <div class="col-4">
+                        <div class="photo"> <img src="assets/images/new_product1.png" alt=""></div>
+                        <h3>Thermo Ball Etip Gloves</h3>
+                        <p>$ 45,743</p>
+                    </div>
+                    <div class="col-4">
+                       <div class="photo"> <img src="assets/images/new_product2.png" alt=""></div>
+                        <h3>Thermo Ball Etip Gloves</h3>
+                        <p>$ 45,743</p>
+                    </div>
+                    <div class="col-4">
+                        <div class="photo"><img src="assets/images/new_product3.png" alt=""></div>
+                        <h3>Thermo Ball Etip Gloves</h3>
+                        <p>$ 45,743</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="angry-grid">
+            <div id="item-0"><img src="assets/images/gallery1.png" alt=""></div>
+            <div id="item-1"><img src="assets/images/gallery2.png" alt=""></div>
+            <div id="item-2"><img src="assets/images/gallery3.png" alt=""></div>
+            <div id="item-3"><img src="assets/images/gallery4.png" alt=""></div>
+        </div>
     </section>
 
     <section id="popular-items">
         <div class="popular-items">
-            <div class="head">
+            <div class="head-1">
                 <h2>Popular Items</h2>
                 <p>Consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna <br> aliqua.
                     Quis
                     ipsum suspendisse ultrices gravida.</p>
             </div>
-            <div class="cards">
+            <div class="popular-items-cards">
                 <div class="row">
                     <div class="col-4">
                         <img src="assets/images/popular1.png" alt="">
@@ -110,7 +143,114 @@
                 <button class="more-products">VIEW MORE PRODUCTS</button>
             </div>
         </div>
+
+        <div class="banner-2">
+            <div class="banner-left-2">
+                <h2>Watch of Choice</h2>
+                <p>Enim ad minim veniam, quis nostrud exercitation ullamco <br> laboris nisi ut aliquip ex ea commodo
+                    consequat. Duis aute <br> irure dolor in reprehenderit in voluptate velit esse.</p>
+                <button class="show-btn">SHOW WATCHES</button>
+            </div>
+            <div class="banner-right-2">
+                <img src="assets/images/popular6.png" alt="">
+            </div>
+        </div>
+
+        <div class="banner-3">
+            <div class="banner-left-3">
+                <img src="assets/images/popular4.png" alt="">
+            </div>
+            <div class="banner-right-3">
+                <h2>Watch of Choice</h2>
+                <p>Enim ad minim veniam, quis nostrud exercitation ullamco <br> laboris nisi ut aliquip ex ea commodo
+                    consequat. Duis aute <br> irure dolor in reprehenderit in voluptate velit esse.</p>
+                <button class="show-btn">SHOW WATCHES</button>
+            </div>
+        </div>
+
+        <div class="system">
+            <div class="row">
+                <div class="col-4">
+                    <i class="fa-solid fa-cube"></i>
+                    <h6>Free Shipping Method</h6>
+                    <p>aorem ixpsacdolor sit ameasecur <br> adipisicing elitsf edasd.</p>
+                </div>
+                <div class="col-4">
+                    <i class="fa-solid fa-unlock-keyhole"></i>
+                    <h6>Secure Payment System</h6>
+                    <p>aorem ixpsacdolor sit ameasecur <br> adipisicing elitsf edasd.</p>
+                </div>
+                <div class="col-4">
+                    <i class="fa-solid fa-rotate"></i>
+                    <h6>Secure Payment System</h6>
+                    <p>aorem ixpsacdolor sit ameasecur <br> adipisicing elitsf edasd.</p>
+                </div>
+            </div>
+        </div>
     </section>
+
+    <footer id="footer">
+        <div class="footer container">
+            <div class="row">
+                <div class="col-3">
+                    <img src="assets/images/logo (2).png" alt="">
+                    <p>Asorem ipsum adipolor sdit amet, <br> consectetur adipisicing elitcf sed do <br> eiusmod tem.</p>
+
+                </div>
+                <div class="col-3">
+                    <h4>Quick Links</h4>
+                    <ul>
+                        <li>
+                            <a href="#">About</a>
+                        </li>
+                        <li>
+                            <a href="#">Offers&Discounts</a>
+                        </li>
+                        <li>
+                            <a href="#">Get Coupon</a>
+                        </li>
+                        <li>
+                            <a href="#">Contact Us</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="col-3">
+                    <h4>New Products</h4>
+                    <ul>
+                        <li>
+                            <a href="#">Woman Cloth</a>
+                        </li>
+                        <li>
+                            <a href="#">Fashion Accessories</a>
+                        </li>
+                        <li>
+                            <a href="#">Man Accessories</a>
+                        </li>
+                        <li>
+                            <a href="#">Rubber made Toys</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="col-3">
+                    <h4>Support</h4>
+                    <ul>
+                        <li>
+                            <a href="#">Frequently Asked Questions</a>
+                        </li>
+                        <li>
+                            <a href="#">Terms & Conditions</a>
+                        </li>
+                        <li>
+                            <a href="#">Privacy Policy</a>
+                        </li>
+                        <li>
+                            <a href="#">Report a Payment Issue</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
